<resources>
    <string name="app_name" translatable="false">WheelLog</string>
    <string name="unknown_device">Unknown device</string>
    <string name="ble_not_supported">Bluetooth LE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported on your device.</string>
    <string name="error_bluetooth_not_initialised">Unable to initialize Bluetooth, exiting</string>
    <string name="bluetooth_required">Bluetooth is required and was not successfully enabled.</string>
    <string name="bluetooth_direct_connect_failed">Direct connection failed. Searching for Wheel…</string>
    <string name="back_to_exit">Press BACK again to exit</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="searching">Searching</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_to_wheel">Connect to Wheel</string>
    <string name="disconnect_from_wheel">Disconnect from Wheel</string>
    <string name="wheel_disconnected">Wheel Disconnected</string>
    <string name="wheel_connecting">Connecting to Wheel…</string>
    <string name="wheel_searching">Searching for Wheel…</string>
    <string name="wheel_connected">Wheel Connected</string>
    <string name="waiting_for_device">Waiting for device</string>
    <string name="start_pebble_service">Start Pebble Dash</string>
    <string name="stop_pebble_service">Stop Pebble Dash</string>
    <string name="start_data_service">Start Logging</string>
    <string name="stop_data_service">Stop Logging</string>
    <string name="start_speech_service">Enable Voice Messages</string>
    <string name="stop_speech_service">Disable Voice Messages</string>
    <string name="started_logging">Started logging to %1$s</string>
    <string name="wheel_type_recognized">Detected wheel protocol %1$s</string>
    <string name="search_for_wheel">Search for Wheel</string>
    <string name="scanning">Scanning…</string>
    <string name="devices">Devices</string>
    <string name="mode_learn">Beginner</string>
    <string name="mode_play">Expert</string>
    <string name="mode_ride">Normal</string>
    <string name="waiting_for_wheel">Waiting for wheel…</string>
    <string name="speed">Speed</string>
	<string name="average_speed">Avg Speed</string>
	<string name="average_riding_speed">Avg Riding</string>
    <string name="top_speed">Top Speed</string>
    <string name="battery">Battery</string>
    <string name="distance">Distance</string>
	<string name="wheel_distance">Wheel Distance</string>
	<string name="user_distance">User Distance</string>
    <string name="ride_time">Journey Time</string>
	<string name="riding_time">Ride Time</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="power">Power</string>
    <string name="temperature">System temp</string>
	<string name="temperature2">CPU(?) temp</string>
	<string name="angle">Tilt</string>
	<string name="roll">Roll</string>
    <string name="fan_status">Fan Status</string>
    <string name="mode">Mode</string>
    <string name="total_distance">Total Distance</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="version">Version</string>
    <string name="serial_number">Serial Number</string>
    <string name="notification_text">%1$d%% • %2$d°C • %3$.1f km</string>
    <string name="general_preferences" translatable="false">speed_preferences</string>
    <string name="log_preferences" translatable="false">log_preferences</string>
    <string name="alarm_preferences" translatable="false">alarm_preferences</string>
    <string name="watch_preferences" translatable="false">watch_preferences</string>
    <string name="wheel_settings" translatable="false">wheel_settings</string>
    <string name="speech_preferences" translatable="false">speech_preferences</string>
    <string name="speech_messages_preferences" translatable="false">speech_messages_preferences</string>
    <string name="livemap_preferences" translatable="false">livemap_preferences</string>
    <string name="alarms_enabled" translatable="false">alarms_enabled</string>
    <string name="disable_phone_vibrate" translatable="false">disable_phone_vibrate</string>
    <string name="alarm_1_speed" translatable="false">alarm_1_speed</string>
    <string name="alarm_1_battery" translatable="false">alarm_1_battery</string>
    <string name="alarm_2_speed" translatable="false">alarm_2_speed</string>
    <string name="alarm_2_battery" translatable="false">alarm_2_battery</string>
    <string name="alarm_3_speed" translatable="false">alarm_3_speed</string>
    <string name="alarm_3_battery" translatable="false">alarm_3_battery</string>
    <string name="alarm_current" translatable="false">alarm_current</string>
	<string name="alarm_temperature" translatable="false">alarm_temperature</string>
    <string name="use_mi" translatable="false">use_mi</string>
    <string name="use_f" translatable="false">use_f</string>
    <string name="max_speed" translatable="false">max_speed</string>
	<string name="reset_top_speed" translatable="false">reset_top_speed</string>
	<string name="reset_user_distance" translatable="false">reset_user_distance</string>
    <string name="last_mac" translatable="false">last_mac</string>
    <string name="about" translatable="false">about</string>
    <string name="livemap_api_key" translatable="false">livemap_api_key</string>
    <string name="livemap_update_interval" translatable="false">livemap_update_interval</string>
    <string name="livemap_publish" translatable="false">livemap_publish</string>
    <string name="livemap_start_new_segment" translatable="false">livemap_start_new_segment</string>
    <string name="speech_msg_interval" translatable="false">speech_msg_rate</string>
    <string name="speech_rate" translatable="false">speech_rate</string>
    <string name="speech_pitch" translatable="false">speech_pitch</string>
    <string name="speech_only_when_moving" translatable="false">speech_only_when_moving</string>
    <string name="speech_msg_mode" translatable="false">speech_msg_mode</string>
    <string name="speech_enable_on_startup" translatable="false">speech_enable_on_startup</string>
    <string name="speech_messages_speed" translatable="false">speech_messages_speed</string>
    <string name="speech_messages_avg_speed" translatable="false">speech_messages_avg_speed</string>
    <string name="speech_messages_distance" translatable="false">speech_messages_distance</string>
    <string name="speech_messages_battery" translatable="false">speech_messages_battery</string>
    <string name="speech_messages_phone_battery" translatable="false">speech_messages_phone_battery</string>
    <string name="speech_messages_voltage" translatable="false">speech_messages_voltage</string>
    <string name="speech_messages_current" translatable="false">speech_messages_current</string>
    <string name="speech_messages_power" translatable="false">speech_messages_power</string>
    <string name="speech_messages_temperature" translatable="false">speech_messages_temperature</string>
    <string name="speech_messages_time" translatable="false">speech_messages_time</string>
    <string name="speech_messages_time_from_start" translatable="false">speech_messages_time_from_start</string>
    <string name="speech_messages_time_in_motion" translatable="false">speech_messages_time_in_motion</string>
    <string name="speech_messages_battery_low_level" translatable="false">speech_messages_battery_low_level</string>
    <string name="speech_messages_phone_battery_low_level" translatable="false">speech_messages_phone_battery_low_level</string>
    <string name="speech_messages_distance_use_location" translatable="false">speech_messages_distance_use_location</string>
    <string name="speech_messages_weather" translatable="false">speech_messages_weather</string>
    <string name="speech_enable_on_startup_title">Turn on voice messages on startup</string>
    <string name="speech_rate_title">Speech rate</string>
    <string name="speech_pitch_title">Speech pitch</string>
    <string name="speech_only_when_moving_title">Messages only in motion</string>
    <string name="speech_only_when_moving_summary">Alarms and warnings are always active</string>
    <string name="speech_msg_mode_title">Triggering</string>
    <string name="speech_msg_interval_title">Interval</string>
    <string name="speech_messages_preferences_title">Messages configuration</string>
    <string name="use_mi_title">Speed and distance in miles</string>
    <string name="use_mi_summary">Show speed and distance in miles rather than kilometers</string>
    <string name="use_f_title">Temperature in degrees Fahrenheit</string>
    <string name="use_f_summary">Show temperature in degrees Fahrenheit rather than Celsius</string>
    <string name="max_speed_title">Max speed</string>
    <string name="max_speed_summary">The maximum speed shown on the outer dial</string>
    <string name="livemap_api_key_title">API key</string>
    <string name="livemap_api_key_summary">Enter your API key to enable live map</string>
    <string name="livemap_update_interval_title">Update interval</string>
    <string name="livemap_update_interval_summary">Select how often your location and wheel data are sent to the server and updated on the live map</string>
    <string name="livemap_start_new_segment_title">Start new segment instead of new tour</string>
    <string name="livemap_start_new_segment_summary">Check if you want to continue latest tour instead of starting new one</string>
    <string name="livemap_publish_title">Tour visibility</string>
    <string name="livemap_publish_summary">Define who can see your tour</string>
    <string name="show_when_locked" translatable="false">show_when_locked</string>
    <string name="show_when_locked_title">Show when locked</string>
    <string name="show_when_locked_summary">Show main window even if the screen is locked</string>
    <string name="speed_correction" translatable="false">speed_correction</string>
    <string name="speed_correction_title">Wheel speed correction</string>
    <string name="dist_correction" translatable="false">dist_correction</string>
    <string name="dist_correction_title">Wheel distance correction</string>
    <string name="dont_reset_data" translatable="false">dont_reset_data</string>
    <string name="dont_reset_data_title">Don\'t reset wheel data</string>
    <string name="dont_reset_data_summary">Check if you don\'t want to reset wheel data on manual reconnection</string>
    <string name="flic_button_setup" translatable="false">flic_button_setup</string>
    <string name="flic_button_setup_title">Grab Flic button…</string>
    <string name="flic_horn_mode" translatable="false">flic_horn_mode</string>
    <string name="flic_horn_mode_title">Horn mode</string>
    <string name="flic_action_single" translatable="false">flic_action_single</string>
    <string name="flic_action_double" translatable="false">flic_action_double</string>
    <string name="flic_action_hold" translatable="false">flic_action_hold</string>
    <string name="flic_action_single_title">Single-click action</string>
    <string name="flic_action_double_title">Double-click action</string>
    <string name="flic_action_hold_title">Hold action</string>
    <string name="optimized_battery_level" translatable="false">optimized_battery_level</string>
    <string name="optimized_battery_level_title">Realistic battery level</string>
    <string name="optimized_battery_level_summary">Show more realistic battery level with additional safety margin</string>
</resources>