<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:key="@string/livemap_api_key"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:inputType="textPassword"
		android:title="@string/livemap_api_key_title"
		android:summary="@string/livemap_api_key_summary"/>

	<ListPreference
		android:defaultValue="0"
		android:dependency="@string/livemap_api_key"
		android:entries="@array/livemap_publish"
		android:entryValues="@array/livemap_publish_values"
		android:key="@string/livemap_publish"
		android:summary="@string/livemap_publish_summary"
		android:title="@string/livemap_publish_title" />
	<ListPreference
		android:key="@string/livemap_update_interval"
		android:title="@string/livemap_update_interval_title"
		android:dependency="@string/livemap_api_key"
		android:defaultValue="15"
		android:entries="@array/livemap_update_interval"
		android:entryValues="@array/livemap_update_interval_values"
		android:summary="@string/livemap_update_interval_summary" />

	<CheckBoxPreference
		android:key="@string/livemap_start_new_segment"
		android:title="@string/livemap_start_new_segment_title"
		android:dependency="@string/livemap_api_key"
		android:summary="@string/livemap_start_new_segment_summary" />

</PreferenceScreen>