<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/flic_button_setup"
        android:enabled="true"
        android:title="@string/flic_button_setup_title" />

    <ListPreference
        android:key="@string/flic_action_single"
        android:title="@string/flic_action_single_title"
        android:defaultValue="0"
        android:entries="@array/flic_action"
        android:entryValues="@array/flic_action_values" />

    <ListPreference
        android:key="@string/flic_action_double"
        android:title="@string/flic_action_double_title"
        android:defaultValue="0"
        android:entries="@array/flic_action"
        android:entryValues="@array/flic_action_values" />

    <ListPreference
        android:key="@string/flic_action_hold"
        android:title="@string/flic_action_hold_title"
        android:defaultValue="0"
        android:entries="@array/flic_action"
        android:entryValues="@array/flic_action_values" />

    <ListPreference
        android:key="@string/flic_horn_mode"
        android:title="@string/flic_horn_mode_title"
        android:defaultValue="0"
        android:entries="@array/flic_horn_modes"
        android:entryValues="@array/flic_horn_mode_values" />

</PreferenceScreen>