<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:sample="http://schemas.android.com/apk/res-auto">

	<CheckBoxPreference
		android:key="@string/speech_messages_time"
		android:title="Current time" />

    <CheckBoxPreference
        android:key="@string/speech_messages_speed"
		android:defaultValue="true"
        android:title="Current speed" />

	<CheckBoxPreference
		android:key="@string/speech_messages_avg_speed"
		android:title="Average speed" />

	<CheckBoxPreference
		android:key="@string/speech_messages_distance"
		android:defaultValue="true"
		android:title="Distance" />

	<CheckBoxPreference
		android:key="@string/speech_messages_battery"
		android:defaultValue="true"
		android:title="Battery level" />

	<CheckBoxPreference
		android:key="@string/speech_messages_phone_battery"
		android:defaultValue="true"
		android:title="Phone battery level" />

	<CheckBoxPreference
		android:key="@string/speech_messages_voltage"
		android:title="Voltage" />

	<CheckBoxPreference
		android:key="@string/speech_messages_current"
		android:title="Current" />

	<CheckBoxPreference
		android:key="@string/speech_messages_power"
		android:title="Power" />

	<CheckBoxPreference
		android:key="@string/speech_messages_temperature"
		android:title="Temperature" />

	<CheckBoxPreference
		android:key="@string/speech_messages_time_from_start"
		android:defaultValue="true"
		android:title="Time from start" />

	<CheckBoxPreference
		android:key="@string/speech_messages_time_in_motion"
		android:title="Time in motion" />

	<CheckBoxPreference
		android:key="@string/speech_messages_weather"
		android:summary="Available when live map is active"
		android:title="Weather conditions" />

	<PreferenceCategory
		android:title="Warning messages">

		<com.pavelsikun.seekbarpreference.SeekBarPreference
			android:key="@string/speech_messages_battery_low_level"
			android:title="Low battery"
			android:enabled="true"
			android:defaultValue="20"
			sample:msbp_minValue="0"
			sample:msbp_maxValue="100"
			sample:msbp_interval="1"
			sample:msbp_measurementUnit="%"
			sample:msbp_dialogEnabled="true"/>

		<com.pavelsikun.seekbarpreference.SeekBarPreference
			android:key="@string/speech_messages_phone_battery_low_level"
			android:title="Low phone battery"
			android:enabled="true"
			android:defaultValue="20"
			sample:msbp_minValue="0"
			sample:msbp_maxValue="100"
			sample:msbp_interval="1"
			sample:msbp_measurementUnit="%"
			sample:msbp_dialogEnabled="true"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="Options">

		<CheckBoxPreference
			android:key="@string/speech_messages_distance_use_location"
			android:defaultValue="true"
			android:dependency="@string/speech_messages_distance"
			android:textSize="12pt"
			android:title="Use GPS distance when available" />

	</PreferenceCategory>

</PreferenceScreen>