<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/general_preferences"
        android:title="General settings"
        android:icon="@drawable/ic_settings_white_24dp"/>

    <Preference
        android:key="@string/log_preferences"
        android:title="Log settings"
        android:icon="@drawable/ic_show_chart_white_24dp"/>

    <Preference
        android:key="@string/alarm_preferences"
        android:title="Alarm settings"
        android:icon="@drawable/ic_vibration_white_24dp"/>

    <Preference
        android:key="@string/livemap_preferences"
        android:title="Live map settings"
        android:icon="@drawable/ic_action_livemap_white"/>

    <Preference
        android:key="@string/speech_preferences"
        android:title="Voice settings"
        android:icon="@drawable/ic_action_speech_white"/>

    <Preference
        android:key="@string/watch_preferences"
        android:title="Watch preferences"
        android:icon="@drawable/ic_watch_white_24dp" />

    <Preference
        android:key="@string/wheel_settings"
		android:enabled="false"
        android:title="Wheel settings"
        android:icon="@drawable/ic_action_wheel_white" />
	
	<Preference
        android:key="@string/reset_top_speed"
		android:enabled="true"
        android:title="Reset top speed" />

	<Preference
        android:key="@string/reset_user_distance"
		android:enabled="true"
        android:title="Reset user distance" />

    <Preference
        android:key="@string/last_mac"
        android:enabled="true"
        android:title="Edit MAC address" />

    <Preference
        android:key="@string/about"
        android:enabled="true"
        android:title="About WheelLog" />
</PreferenceScreen>