<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:key="@string/alarms_enabled"
        android:title="Enable alarms"
        android:summary="Allow the phone to vibrate as a warning or enable voice alarms" />

    <CheckBoxPreference
        android:key="@string/disable_phone_vibrate"
        android:dependency="alarms_enabled"
        android:title="Disable phone vibration"
        android:summary="Phone will not vibrate but the alarm will be passed to a connected Pebble Watch" />

    <PreferenceCategory
        android:title="Speed alarm - highest priority">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_1_speed"
            android:title="Speed"
            android:summary="Speed that triggers the alarm"
            android:defaultValue="30"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="50"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_dialogEnabled="true"/>

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_1_battery"
            android:title="Battery percent"
            android:summary="Enable alarm when battery at or below this value"
            android:defaultValue="100"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="100"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="%"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Speed alarm - medium priority">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_2_speed"
            android:title="Speed"
            android:summary="Speed that triggers the alarm"
            android:defaultValue="0"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="50"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_dialogEnabled="true"/>

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_2_battery"
            android:title="Battery percent"
            android:summary="Enable alarm when battery at or below this value"
            android:defaultValue="0"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="100"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="%"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Speed alarm - lowest priority">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_3_speed"
            android:title="Speed"
            android:summary="Speed that triggers the alarm"
            android:defaultValue="0"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="50"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_dialogEnabled="true"/>

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_3_battery"
            android:title="Battery percent"
            android:summary="Enable alarm when battery at or below this value"
            android:defaultValue="0"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="100"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="%"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Current alarm">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_current"
            android:title="Current"
            android:summary="Current that triggers the alarm"
            android:defaultValue="35"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="0"
            sample:msbp_maxValue="150"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="A"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

	<PreferenceCategory
        android:title="Temperature alarm">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/alarm_temperature"
            android:title="Temperature"
            android:summary="Temperature that triggers the alarm"
            android:defaultValue="60"
            sample:dependency="alarms_enabled"
            sample:msbp_minValue="20"
            sample:msbp_maxValue="100"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="°"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

</PreferenceScreen>